[project]
name = "garnet"
version = "0.1.0"
description = "Garnet is a remote cache-store from Microsoft Research that offers strong performance (throughput and latency), scalability, storage, recovery, cluster sharding, key migration, and replication features. Garnet can work with existing Redis clients."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
